--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <div class="skill">
             <div class="skill-header">
               <span class="skill-name">Software Design</span>
-              <span class="skill-percentage">90%</span>
+              <span class="skill-percentage">90</span>
             </div>
             <div class="skill-bar">
               <div class="skill-progress" data-width="90"></div>
@@ -126,7 +126,7 @@
           <div class="skill">
             <div class="skill-header">
               <span class="skill-name">Web Development</span>
-              <span class="skill-percentage">85%</span>
+              <span class="skill-percentage">85</span>
             </div>
             <div class="skill-bar">
               <div class="skill-progress" data-width="85"></div>
@@ -136,7 +136,7 @@
           <div class="skill">
             <div class="skill-header">
               <span class="skill-name">Branding</span>
-              <span class="skill-percentage">75%</span>
+              <span class="skill-percentage">75</span>
             </div>
             <div class="skill-bar">
               <div class="skill-progress" data-width="75"></div>
@@ -146,7 +146,7 @@
           <div class="skill">
             <div class="skill-header">
               <span class="skill-name">Photography</span>
-              <span class="skill-percentage">80%</span>
+              <span class="skill-percentage">80</span>
             </div>
             <div class="skill-bar">
               <div class="skill-progress" data-width="80"></div>
